# ragwatch

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bump-version.yml  ci.yml  publish.yml
docs/: EXTENSION_GUIDE.md  api-reference.md  configuration.md  crewai.md  custom-attributes.md  index.md  langgraph.md  production-cookbook.md  quality-scores.md  quickstart.md  roadmap.md  telemetry-extraction.md
examples/: README.md  crewai_agent.py  custom_extensions.py  langgraph_agent.py  minimal_rag.py
ragwatch/: __init__.py
ragwatch/adapters/: base.py
ragwatch/adapters/crewai/: __init__.py  adapter.py  decorators.py
ragwatch/adapters/langgraph/: __init__.py  adapter.py  decorators.py
ragwatch/core/: config.py  context.py  runtime.py  span_kinds.py  tracer.py
ragwatch/instrumentation/: attribute_policy.py  attributes.py  context_model.py  decorators.py  embedding.py  evaluators.py  extractors.py  helpers.py  io_tracker.py  result_transformers.py  retrieval.py  semconv.py  span_hooks.py  token_usage.py
tests/: conftest.py  test_adapter_contracts.py  test_adapters_crewai.py  test_adapters_langgraph.py  test_attribute_policy.py  test_configure_idempotent.py  test_context.py  test_context_model.py  test_contract_stabilization.py  test_decorators.py  test_documented_usage.py  test_evaluators.py  test_extractors.py  test_failure_isolation.py  test_integration.py  test_io_tracker.py  test_pluggable_transforms.py  test_runtime.py  test_semconv.py  test_span_hooks.py  test_tracer.py
